_path in _form.html.erb hinzugefuegt

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,6 +9,6 @@
   </p>
   <p>
     <%= f.submit %>
-	<%= link_to 'send Email', email_send%>
+	<%= link_to 'send Email', email_send_path %>
   </p>
 <% end %>
