Commenter, Post und Comment in E-Mail einbezogen.

--- a/app/views/user_mailer/send_email.text.erb
+++ b/app/views/user_mailer/send_email.text.erb
@@ -1,2 +1,3 @@
+<%= @comment.commenter %> hat den post: "<%= @comment.post.title %>" wie folgt kommentiert:
 
-<%= @blabla %>
+<%= @comment.bodfy %>
