Kleine aenderung an Email Layout.

--- a/app/views/user_mailer/send_email.html.erb
+++ b/app/views/user_mailer/send_email.html.erb
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<style type="text/css">
-			h1{background-color: green;
+			h1{background-color: ;
 				}
 		</style>
 	</head>
 	<body>
 		<h1>Comment</h1>
-		<%= @comment.commenter %> hat den post: "<%= @comment.post.title %>" wie folgt kommentiert:
+		"<%= @comment.commenter %>" hat den post: "<%= @comment.post.title %>" wie folgt kommentiert:
 
-		<%= @comment.bodfy %>
+		"<%= @comment.bodfy %>"
 	</body>
 
 </html>
